--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Xiaofeng</a>
+    <a href="/">xiaofeng</a>
     <a class="extra" href="/">home</a>
   </div>
 
