change readme and html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,10 @@ var WRInitTime=(new Date()).getTime();
     <div class="contact">
       <p>
         xiaofeng
+        <br />
+        This Page forks from 
+          <a href="http://github.com/mojombo/jekyll">mojombo</a>,
+        <br />
       </p>
     </div>
   </div>
