add my github link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@ var WRInitTime=(new Date()).getTime();
     <div class="contact">
       <p>
         This Page forks from 
-          <a href="http://github.com/mojombo/jekyll">mojombo</a>,
+          <a href="http://github.com/mojombo/jekyll">mojombo</a>, my github is
+          <a href="https://github.com/xiaofeng1986/xiaofeng1986.github.io">xiaofeng1986</a>,
       </p>
     </div>
   </div>
